--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [build-system]
-requires = ["setuptools>=72.0", "wheel", "prompt_toolkit~=3.0.47"]
+requires = ["setuptools>=72.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "megabot9_GPFG9"
+name = "megabot9"
 version = "1.0.0"
 authors = [
   { name="IB" },
@@ -20,9 +20,13 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
+dependencies = [
+    "prompt_toolkit~=3.0.47"
+]
 
 [project.scripts]
-megabot = "megabot9_GPFG9.main:main"
+megabot = "megabot9.main:main"
+megabot9 = "megabot9.main:main"
 
 [tool.setuptools]
 package-dir = {"" = "src"}
